2012-04-23  Per Bothner  <per@bothner.com>

	* Expression.java (neverReturns): New convenience method.

2012-04-22  Per Bothner  <per@bothner.com>

	* BlockExp.java (compile): Don't need goto around exitBody
	if unreachable.
	* IfExp.java (compile): Comment out optimization for when else is
	an ExitExp, as it doesn't handle unreachability properly.

	* BlockExp.java (id, counter): New fields.
	(toString, print): Use id field.

	* ExitExp.java (print) Print block's id.

2012-04-05  Per Bothner  <per@bothner.com>

	* ReferenceExp.java (PREFER_BINDING2): Move flag from here ...
	* SetExp.java (PREFER_BINDING2): .. and here ...
	* AccessExp.java (PREFER_BINDING2): ... to common super-class here.

2012-03-21  Per Bothner  <per@bothner.com>

	* Language.java (unionType): Handle Type.neverReturnsType.

	* InlineCalls.java: Defer visiting body of delay or lazy,
	thus avoiding false warnings about initialized variables.
	(deferableInit): New method.

	* LambdaExp.java (unknownContinuation): Cast of null needed due to
	change to use varargs.
	* ApplyExp.java (<init>): Convert to using varargs.

	* InlineCalls.java (visitLetExp): Special case if decl is bound
	to a lambda (as in a letrec).

	* FindCapturedVars.java (visitSetExp): Before warning about setting
	unknown, check dynamic environment, as we do for visitReferenceExp.
	(maybeWarnNoDeclarationSeen): New helper method.

2012-03-20  Per Bothner  <per@bothner.com>

	* FindCapturedVars.java (visitSetExp): Warn if setting unknown.

2012-03-15  Per Bothner  <per@bothner.com>

	Implement data-flow from argument to function parameter.
	This includes possible inlining of functions passed as parameters.
	* InlineCalls.java (typeForCalledFunction): New helper function.
	(visitReferenceExp): Many changes.
	(visitRemainingDeclaredLambdas): Warn for unused lambdas.
	(visitFluidLetExp): New method.
	(ProcedureInCallContext): New helper class.
	* FindTailCalls.java: Don't setCanRead or setCanCall - now handled