@@ -583,7 +583,7 @@ check-bridge:
 
 CLEANFILES = tmp* *.log testing.zip revcomp-input.txt knucleotide-input.txt regexdna-input.txt *.class HelloCgiK HelloCgiS
 SCRIPTS_TO_RUN = uninit1.scm errors1.scm sva34005.scm sva35362.scm \
-  anonymous-lambda-1.scm \
+  sva35728.scm anonymous-lambda-1.scm \
   srfi-45-test1.scm srfi-45-test2.scm reflect1.scm promise1.scm
 EXTRA_DIST = testing.scm test.scm num-test.scm mac-test.scm mac1.scm \
   classes1.scm classes2.scm SimpleB.java obj-test.scm arr-test.scm \
